# fatdemo

./: .gitignore  README.md  TODO.md
Code/: TODO.md
Code/Demo/00-UnitTest/: Main.cpp  UnitTest_uber.cpp
Code/Demo/00-UnitTest/Kernel/: AtomicIntTest.cpp  ConditionVariableTest.cpp  MathTest.cpp  MutexFastTest.cpp  SmartPtrTest.cpp  ThreadTest.cpp  TimeTest.cpp  UnitTestSelfTest.cpp
Code/Demo/01-HelloWnd/: Main.cpp
Code/Docs/: DevelopingNotes.md
Code/FatFramework/: FatFramework.h  FatFramework_uber.cpp
Code/FatFramework/Application/: Application.cpp  Application.h  Application_Android.cpp  IApplication.h  IWidget.cpp  IWidget.h  Widget_Win32.cpp  Widget_Win32.h
Code/FatFramework/Driver/Client/: CommandBuffer.cpp  CommandBuffer.h  CommandLocker.cpp  CommandLocker.h  Context.cpp  Context.h  Device.cpp  Device.h  DriverStatistics.cpp  DriverStatistics.h  FactorySelector.cpp  FactorySelector.h  FactoryType.h  ICommand.cpp  ICommand.h  IObject.cpp  IObject.h  IState.cpp  IState.h  StateCache.cpp  StateCache.h  StateType.h
Code/FatFramework/JobSystem/: Job.cpp  Job.h
Code/FatFramework/Kernel/: PlatformConfig.h  PlatformHeaders.h
Code/FatFramework/Kernel/Common/: Assertion.cpp  Assertion.h  Log.cpp  Log.h  Memory.cpp  Memory.h  OS.cpp  SmartPtr.h  Time.cpp  Time.h  Types.h
Code/FatFramework/Kernel/Math/: Float3.cpp  Float3.h  Float4.cpp  Float4.h  Utils.h
Code/FatFramework/Kernel/String/: TCharTraits.h  TStackString.h  TString.h
Code/FatFramework/Kernel/Thread/: AtomicInt.cpp  AtomicInt.h  ConditionVariable.cpp  ConditionVariable.h  Event.cpp  Event.h  Interlocked.h  LockFreeQueue.h  Mutex.cpp  Mutex.h  MutexFast.cpp  MutexFast.h  SpinLock.h  Thread.cpp  Thread.h  ThreadUtil.h
Code/FatFramework/Kernel/UnitTest/: UnitTest.cpp  UnitTest.h
Code/Framework/Application/: Application.h  Application_Android.cpp
Code/Framework/Driver/Client/: Context.h  ICommand.cpp  ICommand.h
Code/Solutions/Android/: local.properties.template
Code/Solutions/Emake/: 00-UnitTest.mak  FatFramework.mak  build.sh  linux_debug.ini  rebuild.sh
Code/Solutions/VS2017/: FatDemo.sln
Docs/: DevelopNotes.md
Solutions/Android/: README.md  local.properties.template  settings.gradle  setup_build_env.cmd.template
Solutions/Android/00-UnitTest/: build.gradle
Solutions/Android/00-UnitTest/src/main/cpp/: CMakeLists.txt
Solutions/Android/01-HelloWnd/: build.gradle
Solutions/Android/01-RenderThread/: build.gradle
Solutions/Emake/: 00-UnitTest.mak  FatFramework.mak  android-armv7-debug.ini  android-build.cmd  build.sh  linux_release.ini  openbsd_debug.ini  openbsd_release.ini  rebuild.sh
Solutions/VS2017/: FatDemo.sln
Solutions/VS2017/Demos/: 00-UnitTest.vcxproj  00-UnitTest.vcxproj.filters  00-UnitTest_uber.vcxproj  00-UnitTest_uber.vcxproj.filters  01-HelloWnd.vcxproj  01-HelloWnd.vcxproj.filters
Solutions/VS2017/Libs/: FatFramework.vcxproj  FatFramework.vcxproj.filters  FatFramework_uber.vcxproj  FatFramework_uber.vcxproj.filters
Solutions/VS2017/Props/: FatBase.props  FatDebug.props  FatDemo.props  FatMacroDebug.props  FatMacroRelease.props  FatProfile.props  FatRelease.props
Src/Demo/00-UnitTest/: AtomicIntTest.cpp  ConditionVariableTest.cpp  Main.cpp  MutexFastTest.cpp  MutexTest.cpp  SmartPtrTest.cpp  ThreadTest.cpp  UnitTestSelfTest.cpp  UnitTest_uber.cpp
Src/Demo/01-HelloWnd/: Main.cpp
Src/Framework/: FatFramework.h  FatFramework_uber.cpp
Src/Framework/Application/: Application.cpp  Application.h  Application_Android.cpp  IApplication.h  IWidget.cpp  IWidget.h  Widget_Win32.cpp  Widget_Win32.h
Src/Framework/Kernel/: Assertion.cpp  Assertion.h  Kernel.cpp  Kernel.h  Memory.cpp  Memory.h  PlatformConfig.h  PlatformDefines.h  PlatformHeaders.h  Registration.cpp  Registration.h  TStackString.h  TString.h  Types.h
(+203 files in other folders)
